<resources>
    <string name="app_name">BabyNeedsApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="hint_item">"Enter Item "</string>
    <string name="quantity">Enter Quantity</string>
    <string name="hint_color">Enter Colour</string>
    <string name="hint_size">Enter Size</string>
    <string name="save_button">Save</string>
    <string name="sure_text">"Are You Sure "</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="Edit_Text">Edit Item</string>
    <string name="Update_Text">Update</string>
</resources>