<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/babyItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:hint="@string/hint_item" />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/babyItem"
                android:hint="@string/quantity"
                android:inputType="number"/>

            <EditText
                android:id="@+id/itemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemQuantity"
                android:hint="@string/hint_color" />

            <EditText
                android:id="@+id/itemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemColor"
                android:hint="@string/hint_size"
                android:inputType="number"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemSize"
                android:layout_marginEnd="5dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/save_button"
                android:textSize="14dp"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>