<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_alert"
                android:text="@string/sure_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/conf_yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/yes_text"
                android:textColor="@color/cardview_light_background"
                android:layout_marginTop="50dp"/>

            <Button
                android:layout_alignParentRight="true"
                android:id="@+id/conf_no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/no_text"
                android:textColor="@color/cardview_light_background"
                android:layout_marginTop="50dp"/>



        </RelativeLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>
